--- a/SimpleWeather.UWP/Controls/UVControl.xaml
+++ b/SimpleWeather.UWP/Controls/UVControl.xaml
@@ -3,13 +3,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SimpleWeather.UWP.Controls"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <StackPanel>
-        <toolkitControls:HeaderedContentControl HorizontalContentAlignment="Stretch" 
+        <toolkitControls:HeaderedContentControl HorizontalContentAlignment="Stretch"
                                                 Style="{StaticResource SectionLabelStyle}">
             <toolkitControls:HeaderedContentControl.Header>
                 <TextBlock Text="{x:Bind ViewModel.Title, Mode=OneWay, FallbackValue='UV Index'}"
@@ -32,16 +33,16 @@
                            RelativePanel.Above="UVProgressBar">
                         <Span><Run Text="{x:Bind ViewModel.Index, Mode=OneWay, FallbackValue='9'}" /><Run Text=", " /><Run Text="{x:Bind ViewModel.Description, Mode=OneWay, FallbackValue='Very High'}" /></Span>
                 </TextBlock>
-                <ProgressBar x:Name="UVProgressBar" Height="5" Value="{x:Bind ViewModel.Progress, Mode=OneWay, FallbackValue='66'}" Maximum="100"
-                             Background="{ThemeResource ProgressBarBackgroundBrush}"
-                             Margin="15,5"
-                             RelativePanel.AlignBottomWithPanel="True"
-                             RelativePanel.AlignLeftWithPanel="True"
-                             RelativePanel.AlignRightWithPanel="True">
-                    <ProgressBar.Foreground>
+                <muxc:ProgressBar x:Name="UVProgressBar" Height="5" Value="{x:Bind ViewModel.Progress, Mode=OneWay, FallbackValue='66'}" Maximum="100"
+                                  Background="{ThemeResource ProgressBarBackgroundBrush}"
+                                  Margin="15,5"
+                                  RelativePanel.AlignBottomWithPanel="True"
+                                  RelativePanel.AlignLeftWithPanel="True"
+                                  RelativePanel.AlignRightWithPanel="True">
+                    <muxc:ProgressBar.Foreground>
                         <SolidColorBrush Color="{x:Bind ViewModel.ProgressColor, Mode=OneWay, FallbackValue='Maroon'}" />
-                    </ProgressBar.Foreground>
-                </ProgressBar>
+                    </muxc:ProgressBar.Foreground>
+                </muxc:ProgressBar>
             </RelativePanel>
         </toolkitControls:HeaderedContentControl>
     </StackPanel>
