--- a/SimpleWeather.UWP/Controls/BeaufortControl.xaml
+++ b/SimpleWeather.UWP/Controls/BeaufortControl.xaml
@@ -3,13 +3,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SimpleWeather.UWP.Controls"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <StackPanel>
-        <toolkitControls:HeaderedContentControl HorizontalContentAlignment="Stretch" 
+        <toolkitControls:HeaderedContentControl HorizontalContentAlignment="Stretch"
                                                 Style="{StaticResource SectionLabelStyle}">
             <toolkitControls:HeaderedContentControl.Header>
                 <TextBlock Text="{x:Bind ViewModel.Beaufort.Label, Mode=OneWay, FallbackValue='Beaufort'}"
@@ -31,16 +32,16 @@
                            RelativePanel.AlignTopWithPanel="True"
                            RelativePanel.AlignRightWithPanel="True"
                            RelativePanel.Above="BeaufortProgressBar" />
-                <ProgressBar x:Name="BeaufortProgressBar" Height="5" Value="{x:Bind ViewModel.BeaufortScaleProgress, Mode=OneWay, FallbackValue='66'}" Maximum="100"
-                             Background="{ThemeResource ProgressBarBackgroundBrush}"
-                             Margin="15,5"
-                             RelativePanel.AlignBottomWithPanel="True"
-                             RelativePanel.AlignLeftWithPanel="True"
-                             RelativePanel.AlignRightWithPanel="True">
-                    <ProgressBar.Foreground>
+                <muxc:ProgressBar x:Name="BeaufortProgressBar" Height="5" Value="{x:Bind ViewModel.BeaufortScaleProgress, Mode=OneWay, FallbackValue='66'}" Maximum="100"
+                                  Background="{ThemeResource ProgressBarBackgroundBrush}"
+                                  Margin="15,5"
+                                  RelativePanel.AlignBottomWithPanel="True"
+                                  RelativePanel.AlignLeftWithPanel="True"
+                                  RelativePanel.AlignRightWithPanel="True">
+                    <muxc:ProgressBar.Foreground>
                         <SolidColorBrush Color="{x:Bind ViewModel.BeaufortScaleProgressColor, Mode=OneWay, FallbackValue='Maroon'}" />
-                    </ProgressBar.Foreground>
-                </ProgressBar>
+                    </muxc:ProgressBar.Foreground>
+                </muxc:ProgressBar>
             </RelativePanel>
         </toolkitControls:HeaderedContentControl>
     </StackPanel>
