OpenWeather: migrate to One Call API endpoint
* The new endpoint consolidates current and forecast into one output
* Generate TextForecast using morn/day/eve/night forecast predictions

--- a/SimpleWeather.UWP/Preferences/Settings_General.xaml
+++ b/SimpleWeather.UWP/Preferences/Settings_General.xaml
@@ -75,8 +75,9 @@
                                                GotFocus="KeyEntry_GotFocus" />
                     </Border>
                     <HyperlinkButton x:Name="RegisterKeyButton"
-                                                 x:Uid="RegisterKeyBox" Content="Register for API Key here"
-                                                 Padding="0,10" Visibility="{x:Bind KeyEntry.Visibility, Mode=OneWay}" />
+                                     x:Uid="RegisterKeyBox" Content="Register for API Key here"
+                                     Padding="0,10" Visibility="{x:Bind KeyEntry.Visibility, Mode=OneWay}"
+                                     Style="{ThemeResource HyperlinkButtonStyle}" />
                 </StackPanel>
             </StackPanel>
         </ScrollViewer>
