--- a/SimpleWeather.UWP/Controls/WeatherAlertPanel.xaml
+++ b/SimpleWeather.UWP/Controls/WeatherAlertPanel.xaml
@@ -19,7 +19,7 @@
             <Setter Property="HorizontalAlignment" Value="Stretch" />
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
-            <Setter Property="FontWeight" Value="Normal" />
+            <Setter Property="FontWeight" Value="SemiBold" />
             <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
             <Setter Property="UseSystemFocusVisuals" Value="True" />
             <Setter Property="Template">
