--- a/SimpleWeather.UWP/Controls/LocationPanel.xaml
+++ b/SimpleWeather.UWP/Controls/LocationPanel.xaml
@@ -7,8 +7,9 @@
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     mc:Ignorable="d"
-    d:DesignHeight="100"
+    d:DesignHeight="120"
     d:DesignWidth="720"
+    d:DataContext="{x:Bind ViewModel}"
     Tag="{x:Bind ViewModel.LocationData, Mode=OneWay}">
 
     <UserControl.Resources>
@@ -26,35 +27,110 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid x:Name="MainGrid" Background="{ThemeResource SystemAccentColor}" RequestedTheme="{x:Bind ViewModel.BackgroundTheme, Mode=OneWay}">
+    <Grid x:Name="MainGrid" Background="{ThemeResource SystemAccentColor}" RequestedTheme="Dark">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
-            <ColumnDefinition x:Name="IconColumn" Width="70" />
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
         <toolkitControls:ImageEx CachingStrategy="Custom" IsCacheEnabled="True" DecodePixelWidth="1080" Source="{x:Bind ViewModel.ImageData.ImageUri, Mode=OneWay}" Foreground="White"
-                                 Stretch="UniformToFill" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{ThemeResource ImageExProgressStyle}" />
-        <ProgressRing Grid.ColumnSpan="3" IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}" Foreground="White" />
+                                 Stretch="UniformToFill" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{ThemeResource ImageExProgressStyle}"
+                                 Grid.ColumnSpan="3" Grid.RowSpan="2" />
+        <Grid x:Name="GradientOverlay" Grid.ColumnSpan="3" Grid.RowSpan="2">
+            <Grid.Background>
+                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1" SpreadMethod="Pad">
+                    <LinearGradientBrush.GradientStops>
+                        <GradientStop Color="#83121212" Offset="0" />
+                        <GradientStop Color="#70121212" Offset="0.5" />
+                        <GradientStop Color="#83121212" Offset="1" />
+                    </LinearGradientBrush.GradientStops>
+                </LinearGradientBrush>
+            </Grid.Background>
+        </Grid>
+        <ProgressRing Grid.ColumnSpan="3" Grid.RowSpan="2" IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}" Foreground="White" />
         <toolkitControls:DropShadowPanel BlurRadius="15.0"
                                          ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}"
-                                         VerticalAlignment="Center" Margin="10,0">
+                                         VerticalAlignment="Center" Margin="10,5,10,0"
+                                         Grid.ColumnSpan="3" Grid.Row="0">
             <TextBlock x:Name="LocationName" Text="{x:Bind ViewModel.LocationName, FallbackValue='San Fernando del Valle de Catamarca, Argentina', Mode=OneWay}"
-                       FontSize="24" FontWeight="SemiBold"
-                       TextWrapping="WrapWholeWords" TextTrimming="CharacterEllipsis" />
+                       FontSize="14" FontWeight="Medium" MaxLines="1"
+                       TextTrimming="CharacterEllipsis" />
         </toolkitControls:DropShadowPanel>
-        <toolkitControls:DropShadowPanel BlurRadius="15.0"
-                                         ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}"
-                                         VerticalAlignment="Center" Grid.Column="1">
-            <TextBlock x:Name="CurrentTemp" Text="{x:Bind ViewModel.CurrTemp, FallbackValue='70º', Mode=OneWay}"
-                       FontSize="26" FontWeight="Bold" Padding="10,0" />
-        </toolkitControls:DropShadowPanel>
-        <Viewbox Name="IconBox" Height="48" Grid.Column="2">
-            <toolkitControls:DropShadowPanel BlurRadius="10.0" ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}"
+        <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="1"
+                    HorizontalAlignment="Left" VerticalAlignment="Center"
+                    Margin="5,0">
+            <toolkitControls:DropShadowPanel BlurRadius="15.0"
+                                             ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}"
                                              VerticalAlignment="Center">
-                <TextBlock x:Name="WeatherIcon" Text="{x:Bind ViewModel.WeatherIcon, FallbackValue='&#xf00d;', Mode=OneWay}"
-                           FontSize="48" FontWeight="SemiBold" Style="{StaticResource WeatherIcon}" />
+                <TextBlock x:Name="CurrentTemp" Text="{x:Bind ViewModel.CurrTemp, FallbackValue='70º', Mode=OneWay}"
+                           FontSize="36" FontWeight="Medium" Style="{StaticResource WeatherIcon}" Padding="5,0" />
             </toolkitControls:DropShadowPanel>
-        </Viewbox>
+            <toolkitControls:DropShadowPanel BlurRadius="15.0"
+                                             ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}">
+                <TextBlock x:Name="CurWeather" Text="{x:Bind ViewModel.CurrWeather, Mode=OneWay, FallbackValue='Mostly Cloudy'}"
+                           FontSize="16" FontWeight="Medium" MaxLines="1" Padding="5,0"
+                           MaxWidth="200" TextTrimming="WordEllipsis" />
+            </toolkitControls:DropShadowPanel>
+        </StackPanel>
+        <toolkitControls:DropShadowPanel BlurRadius="15.0"
+                                             ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}"
+                                             VerticalAlignment="Center" HorizontalAlignment="Right"
+                                             Grid.Row="1" Grid.Column="1" Margin="10,0">
+            <TextBlock x:Name="HiLoTemp" FontSize="20" FontWeight="Medium" Style="{ThemeResource WeatherIcon}"
+                           HorizontalTextAlignment="Right"
+                           Visibility="{x:Bind ViewModel.HiTemp, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
+                    <Span><Run Text="{x:Bind ViewModel.HiTemp, Mode=OneWay, FallbackValue='80º', TargetNullValue='--'}" /><Run Text=" &#xf058;" /></Span>
+                    <LineBreak />
+                    <Span><Run Text="{x:Bind ViewModel.LoTemp, Mode=OneWay, FallbackValue='65º', TargetNullValue='--'}" /><Run Text=" &#xf044;" /></Span>
+            </TextBlock>
+        </toolkitControls:DropShadowPanel>
+        <StackPanel Grid.Row="1" Grid.Column="2" Margin="10,0" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <StackPanel Orientation="Horizontal"
+                            VerticalAlignment="Center" HorizontalAlignment="Left"
+                            Visibility="{x:Bind ViewModel.PoP, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}"
+                            Grid.Column="1">
+                <toolkitControls:DropShadowPanel BlurRadius="15.0"
+                                                     ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}">
+                    <TextBlock FontSize="20" FontWeight="Medium" Style="{ThemeResource WeatherIcon}"
+                                   Text="{x:Bind ViewModel.PoPIcon, Mode=OneWay, FallbackValue='&#xf084;'}"
+                                   Width="35">
+                    </TextBlock>
+                </toolkitControls:DropShadowPanel>
+                <toolkitControls:DropShadowPanel BlurRadius="15.0"
+                                                     ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}">
+                    <TextBlock x:Name="PoPCondition" FontSize="20" FontWeight="Medium" Style="{ThemeResource WeatherIcon}"
+                                   Padding="5,0">
+                            <Span>
+                                <Run Text="{x:Bind ViewModel.PoP, FallbackValue='70%', TargetNullValue='--', Mode=OneWay}" />
+                            </Span>
+                    </TextBlock>
+                </toolkitControls:DropShadowPanel>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal"
+                            VerticalAlignment="Center" HorizontalAlignment="Left"
+                            Visibility="{x:Bind ViewModel.WindSpeed, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}"
+                            Grid.Column="1">
+                <toolkitControls:DropShadowPanel BlurRadius="15.0"
+                                                     ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}">
+                    <TextBlock FontSize="18" FontWeight="Medium" Style="{ThemeResource WeatherIcon}"
+                                   Text="&#xf058;" RenderTransformOrigin="0.5,0.5" Width="35">
+                        <TextBlock.RenderTransform>
+                            <RotateTransform Angle="{x:Bind ViewModel.WindDirection, Mode=OneWay, FallbackValue='90'}" />
+                        </TextBlock.RenderTransform>
+                    </TextBlock>
+                </toolkitControls:DropShadowPanel>
+                <toolkitControls:DropShadowPanel BlurRadius="15.0"
+                                                     ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}">
+                    <TextBlock x:Name="WindCondition" FontSize="20" FontWeight="Medium" Style="{ThemeResource WeatherIcon}"
+                                   Text="{x:Bind ViewModel.WindSpeed, Mode=OneWay, FallbackValue='7 mph'}"
+                                   Padding="5,0" />
+                </toolkitControls:DropShadowPanel>
+            </StackPanel>
+        </StackPanel>
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
                 <VisualState x:Name="Mobile">
@@ -62,11 +138,13 @@
                         <AdaptiveTrigger MinWindowWidth="0" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="LocationName.FontSize" Value="16" />
-                        <Setter Target="CurrentTemp.FontSize" Value="20" />
-                        <Setter Target="MainGrid.Height" Value="70" />
-                        <Setter Target="IconBox.Height" Value="36" />
-                        <Setter Target="IconColumn.Width" Value="60" />
+                        <Setter Target="LocationName.FontSize" Value="14" />
+                        <Setter Target="CurrentTemp.FontSize" Value="32" />
+                        <Setter Target="CurWeather.FontSize" Value="14" />
+                        <Setter Target="HiLoTemp.FontSize" Value="18" />
+                        <Setter Target="PoPCondition.FontSize" Value="16" />
+                        <Setter Target="WindCondition.FontSize" Value="16" />
+                        <Setter Target="MainGrid.Height" Value="110" />
                     </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Desktop">
@@ -74,11 +152,13 @@
                         <AdaptiveTrigger MinWindowWidth="641" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="LocationName.FontSize" Value="18" />
-                        <Setter Target="CurrentTemp.FontSize" Value="22" />
-                        <Setter Target="MainGrid.Height" Value="80" />
-                        <Setter Target="IconBox.Height" Value="44" />
-                        <Setter Target="IconColumn.Width" Value="70" />
+                        <Setter Target="LocationName.FontSize" Value="15" />
+                        <Setter Target="CurrentTemp.FontSize" Value="32" />
+                        <Setter Target="CurWeather.FontSize" Value="16" />
+                        <Setter Target="HiLoTemp.FontSize" Value="18" />
+                        <Setter Target="PoPCondition.FontSize" Value="16" />
+                        <Setter Target="WindCondition.FontSize" Value="16" />
+                        <Setter Target="MainGrid.Height" Value="130" />
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
